--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -7,11 +7,11 @@
     <meta name="author" content="{{ site.name }} @{{ site.twitter }}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+<!-- 
     <link rel="stylesheet" href="{{ site.baseurl }}static/css/base.css">
     <link rel="stylesheet" href="{{ site.baseurl }}static/css/skeleton.css">
     <link rel="stylesheet" href="{{ site.baseurl }}static/css/layout.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
 
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
