--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -7,22 +7,22 @@
     <meta name="author" content="{{ site.name }} @{{ site.twitter }}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<!-- 
+
     <link rel="stylesheet" href="{{ site.baseurl }}static/css/base.css">
     <link rel="stylesheet" href="{{ site.baseurl }}static/css/skeleton.css">
     <link rel="stylesheet" href="{{ site.baseurl }}static/css/layout.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
-    <link rel="shortcut icon" href="{{ site.baseurl }}static/img/favicon.ico">
+<!-- 
+    <link rel="shortcut icon" href="{{ site.baseurl }}static/img/favicon.ico"> -->
     <!-- <link rel="apple-touch-icon" href="static/img/me-icon-57.png"> -->
     <!-- <link rel="apple-touch-icon" sizes="72x72" href="static/img/me-icon-72.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="114x114" href="static/img/me-icon-114.png"> -->
-</head>
-<body>
+    <!-- <link rel="apple-touch-icon" sizes="114x114" href="static/img/me-icon-114.png">
+</head> -->
+<!-- <body> -->
 <div class="container">
     <header class="three columns">
         <img src="{{ site.baseurl }}static/img/profile.png" class="me">
@@ -72,5 +72,5 @@
   ga('send', 'pageview');
 
 </script> 
-</body>
-</html>
+<!-- </body>
+</html> -->
