--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -33,11 +33,11 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}static/css/syntax.css" />
 
     
-    <link rel="stylesheet" href="{{ site.baseurl }}static/css/base.css">
+  <!--   <link rel="stylesheet" href="{{ site.baseurl }}static/css/base.css">
     <link rel="stylesheet" href="{{ site.baseurl }}static/css/skeleton.css">
     <link rel="stylesheet" href="{{ site.baseurl }}static/css/layout.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
+ -->
 
 
 
