--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -44,7 +44,7 @@
 
 
 
-    <header class="three columns">
+    <div class="three columns">
         <img src="{{ site.baseurl }}static/img/profile.png" class="me">
         <h1>{{ site.name }}</h1>
         <p>
@@ -66,7 +66,7 @@
             <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> /
             <a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a>
         </p>
-    </header>
+    </div>
     <div class="thirteen columns clearfix">
 
         {{ content }}
