--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -30,26 +30,13 @@
 <body>
 
 
-<nav class="navbar navbar-default">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{{ site.baseurl }}"><i class="fa fa-home"></i></a>
-    </div>
-    <div id="navbar">
-      <ul class="nav navbar-nav navbar-right">
-       <!--  <li><a href="{{ site.baseurl }}blog.html">BLOG</a></li> -->
-        <li><a href="{{ site.baseurl }}projects.html">PROJECTS</a></li>
-        <li><a href="http://biomadeira.github.io/vitae">RESUME</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+ {% include header.html %}
 
 <div class="container">
 
 
 
-    <div class="three columns">
+    <header class="three columns">
         <img src="{{ site.baseurl }}static/img/profile.png" class="me">
         <h1>{{ site.name }}</h1>
         <p>
@@ -71,7 +58,7 @@
             <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> /
             <a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a>
         </p>
-    </div>
+    </header>
     <div class="thirteen columns clearfix">
 
         {{ content }}
