--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-  <div class="container">
+  <div class="container-fluid" style="max-width: 768px">
     <div class="navbar-header">
       <a class="navbar-brand" href="{{ site.baseurl }}"><i class="fa fa-home"></i></a>
     </div>
@@ -7,7 +7,7 @@
       <ul class="nav navbar-nav navbar-right">
        <!--  <li><a href="{{ site.baseurl }}blog.html">BLOG</a></li> -->
         <li><a href="{{ site.baseurl }}projects.html">PROJECTS</a></li>
-        <li><a href="http://biomadeira.github.io/vitae">RESUME</a></li>
+        <li><a href="{{ site.baseurl }}resume.html">RESUME</a></li>
       </ul>
     </div>
   </div>
