--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,43 +2,50 @@
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Software Engineer</h1>
-            <span><address>Edinburgh, UK</address><time>2015 to Present</time></span>
+            <h1>Proprietary Futures & Commodities Trader</h1>
+            <span><address>Windsor Brown Trading Group, Vancouver, BC</address><time>2009 to Present</time></span>
         </header>
-        <p>Lorem ipsum dolor sit amet, his et viris petentium philosophia,
-            at vix debitis deleniti. At vis velit volumus alienum, agam vocent assueverit usu ex. </p>
+        <p>•Implement trades based on daily research of economic indicators, technical analysis, and fundamental analysis.<br />
+•Develop trading algorithms from the ground up using a framework based on C# (ninjatrader).<br />
+•Implement proprietary strategies which work semi-automated to generate steady returns in any given market condition </p>
     </article>
     <article>
         <header>
-            <h1>iOS Developer</h1>
-            <span><address>Glasgow, UK</address><time>2014 to 2015</time></span>
+            <h1>Logistic Support Manager</h1>
+            <span><address>Mannpower Pharmaceutical Services , Delta, BC</address><time>2009 to 2015</time></span>
         </header>
-        <p>Qui bonorum menandri intellegebat ex, mel quando oblique an. Et eam virtute debitis philosophia,
-            unum ancillae disputationi vim in. Ipsum vidisse meliore ex eum,
-            delectus tacimates conclusionemque has ei. Eam ubique cetero scribentur ne.</p>
+        <p>•Monitor and maintain adequate supply of operating supplies<br />
+•Responsible for assisting with the daily operations of the department.<br />
+•Accuracy and completeness of Clinical Information for a variety of Patient Assistance programs.</p>
     </article>
     <article>
         <header>
-            <h1>Teaching Assistant</h1>
-            <span><address>University of Glasgow, Glasgow, UK</address><time>2013 to 2014</time></span>
+            <h1>Restaurant Owner/Operator </h1>
+            <span><address>Balthazar Restaurant Hideaway , Vancouver, BC</address><time>2005 to 2008</time></span>
         </header>
-        <p>Latine bonorum deserunt at nam. Mea nisl officiis eu, propriae similique has te, mei an brute meliore electram.
-            Quo admodum omittantur ei, etiam principes at eos. Sit vocent commodo ceteros in, at mel idque everti.</p>
+        <p>•Managing the entire staff of the restaurant and coordinating their work <br />
+•Generating detailed daily, monthly, quarterly and yearly reports on business, staff, and profit <br /> 
+•Coordinating and managing the entire operation of restaurant 
+.</p>
     </article>
     <article>
         <header>
-            <h1>iOS Developer</h1>
-            <span><address>Student Start-up, Glasgow, UK</address><time>2013</time></span>
+            <h1>Front-end Developer and Email Designer / Co owner</h1>
+            <span><address>HealthMeds ETC, Richmond, BC</address><time>2003 to 2005</time></span>
         </header>
-        <p>Mucius sententiae et mei, nec an diam ignota, tale epicurei intellegebat ne sit. Sumo pertinacia contentiones duo ei.</p>
+        <p>•Worked with a team of web developers in a web based pharmacy company<br />
+•Design front-end using Javascript and HTML <br/>
+•Engaged in call centre training to assist seniors with filling out forms and implemented a 52 question form using Javascript for validations and PHP for CRUD functionality. <br />
+•Built a workflow of collecting information from clients and sending out to physicians with email template design..</p>
     </article>
     <article>
         <header>
-            <h1>Web Developer</h1>
-            <span><address>Birmingham, UK</address><time>2007 to 2010</time></span>
+            <h1>UI/UX and Web Designer</h1>
+            <span><address>JNZ Technologies , Calgary, Canada</address><time>2001 to 2003</time></span>
         </header>
-        <p> Et sed tritani volumus, dico rebum facilisis ea sed. His mundi efficiantur concludaturque no.
-            Cu eos argumentum constituam repudiandae, eu eum lorem nostrum, ei mel dicam iriure fabellas.
+        <p> •Analyze user experience problems and create design solutions that meet measurable business goals and requirements for internal and external tools and products <br/>
+•Recognize and predict use cases and user interaction <br/>
+•Work directly with product managers, marketing managers, and engineers to assist in the definition of product requirements.
         </p>
     </article>
 </section>
