--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,19 +1,53 @@
 <section class="thirteen columns">
     <h1>Programming Skills</h1>
     <article>
+      
+        <p>
+<!--             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i> -->
+           <div class="container-special">
+            <div class="column-center"> 
+         
+                 <article>
         <header>
-            <h1>Software engineering & web development</h1>
+            <h1>FrameWorks</h1>
+            
         </header>
-        <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>C/C++ & Objective-C</em>
-        <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Java</em>, <em>Python</em>, <em>PHP</em> &amp; <em>Git</em>
-        </p>
-        <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>HTML/CSS3</em> &amp; <em>Javascript</em>
-        </p>
+        <!-- <p>
+            <em>Dissertation: Te dicit scripta nec, nec illud decore partem et.</em>
+        </p> -->
+           <em> Sinatra</em><br/>
+                <em>Rails</em><br /><br />
+               <header> <h1>Design<h1></header><br />
+                <em>Photoshop</em><br />
+                <em>Illustrator</em>
     </article>
+
+
+        </div>
+              
+         <div class="column-left">
+               <article>
+        <header>
+             <h1>Languages</h1></header>
+             <em>HTML</em><br/>
+            <em>CSS</em><br />
+            <em>Ruby</em><br />
+            <em>Javascript</em><br />
+            <em>PHP</em><br />
+            </article>
+         </div>
+            <div class="column-right">
+      <article>
+        <header>
+        <h1>Databases</h1></header>
+            <em>Sqlite</em><br />
+            <em>Postgres</em><br />
+            <em>MySql</em><br />
+    </article>        </div>
+            
+            </div>
+          
+
+          
+    
 </section>
