--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -1,5 +1,5 @@
 <section class="thirteen columns">
-    <h1>Initiatives</h1>
+   <!--  <h1>Initiatives</h1>
     <article>
         <header>
             <h1>Graduate Summer Student</h1>
@@ -17,5 +17,5 @@
         <p>
             Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
         </p>
-    </article>
+    </article> -->
 </section>
