--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,9 +11,9 @@ body {
       /*background: #fff;*/
     font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #444;
-    -webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
+   /* -webkit-font-smoothing: antialiased;  Fix for webkit rendering 
     -webkit-text-size-adjust: 100%;
-
+*/
 
 
 
