--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,3 +1,11 @@
+<style>
+.container-special .column-left{ float: left; width: 33%; }
+.container-special .column-right{ float: right; width: 33%; }
+.container-special .column-center{ display: inline-block; width: 33%; }
+
+</style>
+
+
 <section class="thirteen columns">
     <h1>Programming Skills</h1>
     <article>
