--- a/_includes/education.html
+++ b/_includes/education.html
@@ -4,7 +4,17 @@
         <header>
             <h1>Web Development Bootcamp</h1>
             <span>Lighthouse Labs</span>
-            <span><address>Vancouver, BC</address><time>Mar-May 2016</time></span>
+            <span><address>Vancouver, BC</address><time>Expected Completion -May 2016</time></span>
+        </header>
+        <p><!-- 
+            <em>Thesis: Nemore verear an eos, duo accusam placerat urbanitas at, vix libris putent voluptaria ei.</em> -->
+        </p>
+    </article>
+    <article>
+        <header>
+            <h1>Certificate in Derivative Market Strategies</h1>
+            <span>CSI</span>
+            <span><address>Vancouver, BC</address><time>2013</time></span>
         </header>
         <p><!-- 
             <em>Thesis: Nemore verear an eos, duo accusam placerat urbanitas at, vix libris putent voluptaria ei.</em> -->
