--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -24,7 +24,8 @@
             <em>Dissertation: Te dicit scripta nec, nec illud decore partem et.</em>
         </p> -->
            <em> Sinatra</em><br/>
-                <em>Rails</em><br /><br />
+                <em>Rails</em><br />
+                 <em>Node</em><br /><br />
                <header> <h1>Design<h1></header><br />
                 <em>Photoshop</em><br />
                 <em>Illustrator</em>
@@ -42,6 +43,7 @@
             <em>Ruby</em><br />
             <em>Javascript</em><br />
             <em>PHP</em><br />
+            <em>C#</em><br />
             </article>
          </div>
             <div class="column-right">
