new project added

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,13 +3,26 @@
   <h3>Current Projects</h3>
   <div class="panel panel-default">
     <div class="panel-body">
+    <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="http://tricksy-hobbit.heroku.com">Multiplayer Quiz Game</a></strong>
+			-An application made in Ruby on Rails backend.<br />
+			- Uses ActionCable for real time updates to all clients. <br/>
+			- facebook API for facebook user authenticaton <br />
+			- Owner/Maker of the game can control when to start the game for all users simultaneously <br />
+
+		<br />
+			<a href="http://tricksy-hobbit.heroku.com">- Link to the deployed site</a><br />
+			<a href="https://github.com/windsorbrown/tricksy-trivia">- Source Code at Github</a> <br />
+
+
+		</h5>
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="http://rottenmangoesnew.heroku.com">Movie Review Site</a></strong>
 			-An application made in Ruby on Rails backend.<br />
 			- Allows users to submit / search and review movies on the site<br />
 			- Also has an admin panel which allows user administration and switching roles <br /><br />
 
-			<p>-- Additions to be made -- </p>
+			<p>-- Additions coming soon -- </p>
 			- Add Jquery and Ajax on forms submitted<br />
 			- Change functionality so only admin can submit/add/edit a movie. <br />
 			<br />
@@ -25,7 +38,7 @@
 			- Made in collaboration with 2 other team members <br />
 			- The website allows users to upload their pet photos in order to first compete with other pets of the same species and then after getting highest upvotes is chosen automatically to compete against the cutest pet of the other specie (cat/dog).<br /><br />
 
-			<p>-- Additions / Improvements to be made ---<p>
+			<p>-- Additions / Improvements coming soon ---<p>
 			- Rewrite into Rails<br />
 			- Have an admin user to check if photos are appropiate<br />
 			- have the option for users to upload their own photo too.<br />
