--- a/_includes/education.html
+++ b/_includes/education.html
@@ -12,9 +12,9 @@
     </article>
     <article>
         <header>
-            <h1>Bachelor in General Studies</h1>
+            <h1>General Studies</h1>
             <span>University of Calgary</span>
-            <span><address>Calgary, AB</address><time>1999 to 2002</time></span>
+            <span><address>Calgary, AB</address><time>1999 to 2002 </time></span>
         </header>
         <!-- <p>
             <em>Dissertation: Te dicit scripta nec, nec illud decore partem et.</em>
